--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -1,4 +1,7 @@
 ---
-profile::base::packages:
+profile::packages:
   - packer
   - notepadplusplus
+
+profile::chocolatey::location: 'http://nuget.ad.piccola.us:8080/api/v2'
+profile::chocolatey::chocolatey_download_url: 'http://nuget.ad.piccola.us:8080/api/v2/package/chocolatey/0.10.8'
