--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -3,5 +3,5 @@ profile::packages::packages:
   - packer
   - notepadplusplus
 
-profile::chocolatey::location: 'http://nuget.ad.piccola.us:8080/api/v2'
+profile::chocolatey::location: 'http://nuget.ad.piccola.us:8080/chocolatey'
 profile::chocolatey::chocolatey_download_url: 'http://nuget.ad.piccola.us:8080/api/v2/package/chocolatey/0.10.8'
