--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -1,7 +1,7 @@
 ---
-profile::packages::packages:
+profile::choco_packages::packages:
   - packer
   - notepadplusplus
 
-profile::chocolatey::location: 'http://nuget.ad.piccola.us:8080/chocolatey'
-profile::chocolatey::chocolatey_download_url: 'http://nuget.ad.piccola.us:8080/api/v2/package/chocolatey/0.10.8'
+profile::choco_install::location: 'http://nuget.ad.piccola.us:8080/chocolatey'
+profile::choco_config::chocolatey_download_url: 'http://nuget.ad.piccola.us:8081/chocolatey.0.10.8.nupkg'
