--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -3,5 +3,5 @@ profile::choco_packages::packages:
   - packer
   - notepadplusplus
 
-profile::choco_install::location: 'http://nuget.ad.piccola.us:8080/chocolatey'
-profile::choco_config::chocolatey_download_url: 'http://nuget.ad.piccola.us:8081/chocolatey.0.10.8.nupkg'
+profile::choco_config::location: 'http://nuget.ad.piccola.us:8080/chocolatey'
+profile::choco_install::chocolatey_download_url: 'http://nuget.ad.piccola.us:8081/chocolatey.0.10.8.nupkg'
