--- a/hiera.yaml
+++ b/hiera.yaml
@@ -17,7 +17,7 @@ hierarchy:
     path: "nodes/%{trusted.certname}.yaml"
 
   - name: "Per-Datacenter defaults"
-    path: "datacenters/%{facts.datacenters}.yaml"
+    path: "datacenters/%{facts.datacenter}.yaml"
 
   - name: "Common data"
     path: "common.yaml"
