--- a/hieradata/datacenters/las1.yaml
+++ b/hieradata/datacenters/las1.yaml
@@ -1,3 +1,3 @@
 ---
-profile::wsus_config::server_url: 'http://box.ad.piccola.us:8530s'
+profile::wsus_config::server_url: 'http://box.ad.piccola.us:8530'
 profile::timezone::timezone: 'Pacific Standard Time'
