added kms server for domain

--- a/hieradata/domains/ad.piccola.us.yaml
+++ b/hieradata/domains/ad.piccola.us.yaml
@@ -3,3 +3,5 @@ profile::domain_join::username: ''
 profole::domain_join::password: ''
 profile::domain_join::join_options: ''
 profile::domain_join::domain: ''
+profile::kms::KeyManagementServiceName: 'mono.piccola.us'
+profile::kms::KeyManagementServicePort: '1688' 
