adding fake kms server

--- a/hieradata/domains/ad.piccola.us.yaml
+++ b/hieradata/domains/ad.piccola.us.yaml
@@ -3,5 +3,4 @@ profile::domain_join::username: ''
 profole::domain_join::password: ''
 profile::domain_join::join_options: ''
 profile::domain_join::domain: ''
-profile::kms::key_management_service_name: 'mono.piccola.us'
-profile::kms::key_management_service_port: '1688'
+profile::kms::key_management_service_name: 'mono-bad.piccola.us'
