--- a/hieradata/domains/ad.piccola.us.yaml
+++ b/hieradata/domains/ad.piccola.us.yaml
@@ -3,4 +3,4 @@ profile::domain_join::username: ''
 profole::domain_join::password: ''
 profile::domain_join::join_options: ''
 profile::domain_join::domain: ''
-profile::kms::key_management_service_name: 'mono-bad.piccola.us'
+profile::kms::key_management_service_name: 'mono.piccola.us'
