mod things to use hiera eyaml

--- a/hieradata/win_domains/ad.piccola.us.yaml
+++ b/hieradata/win_domains/ad.piccola.us.yaml
@@ -1,6 +1,4 @@
 ---
-profile::domain_join::username: ''
-profole::domain_join::password: ''
-profile::domain_join::join_options: ''
-profile::domain_join::domain: ''
 profile::kms::key_management_service_name: 'mono.piccola.us'
+profile::domain_join::username: 'svc_djoin_puppet'
+profile::domain_join::join_options: '3'
