--- a/hiera.yaml
+++ b/hiera.yaml
@@ -19,8 +19,15 @@ hierarchy:
   - name: "Per-datacenter defaults"
     path: "datacenters/%{facts.datacenter}.yaml"
 
-  - name: "Per-domain defaults"
-    path: "domains/%{facts.win_domain}.yaml"   
+  - name: "Per-win_domain secret data (encrypted)"
+    lookup_key: eyaml_lookup_key   # Uses non-default backend.
+    path: "win_domains/%{facts.win_domain}.eyaml"
+    options:
+      pkcs7_private_key: /etc/puppetlabs/puppet/eyaml/private_key.pkcs7.pem
+      pkcs7_public_key:  /etc/puppetlabs/puppet/eyaml/public_key.pkcs7.pem
+
+  - name: "Per-win_domain defaults"
+    path: "win_domains/%{facts.win_domain}.yaml"   
 
   - name: "Common data"
     path: "common.yaml"
