--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -3,6 +3,7 @@ profile::choco_packages::packages:
   - packer
   - notepadplusplus
   - checksum
+  - putty
 
 profile::choco_config::location: 'http://nuget.ad.piccola.us:8080/chocolatey'
 profile::choco_install::chocolatey_download_url: 'http://nuget.ad.piccola.us:8081/chocolatey.0.10.8.nupkg'
