--- a/hieradata/datacenters/sea1.yaml
+++ b/hieradata/datacenters/sea1.yaml
@@ -6,3 +6,5 @@ profile::nameservers::nameservers:
   - '8.8.8.8'
   - '8.8.4.4'
 profile::testing::value: 'my_sea1_hiera_value'
+profile::testing::PSWindowsUpdateURL: 'http://nuget.ad.piccola.us:8081/pswindowsupdate.zip'
+profile::testing::WSUSscnURL: 'http://nuget.ad.piccola.us:8081/wsusscn2.cab'
