remove camel case from hiera keys

--- a/hieradata/datacenters/las1.yaml
+++ b/hieradata/datacenters/las1.yaml
@@ -6,5 +6,5 @@ profile::nameservers::nameservers:
   - '8.8.4.4'
   - '8.8.4.4'
 profile::testing::value: 'my_las1_hiera_value'
-profile::testing::PSWindowsUpdateURL: 'http://nuget.ad.piccola.us:8081/pswindowsupdate.zip'
-profile::testing::WSUSscnURL: 'http://nuget.ad.piccola.us:8081/wsusscn2.cab'
+profile::testing::pswindowsupdateurl: 'http://nuget.ad.piccola.us:8081/pswindowsupdate.zip'
+profile::testing::wsusscnurl: 'http://nuget.ad.piccola.us:8081/wsusscn2.cab'
