added download dir support and hiera values

--- a/hieradata/datacenters/las1.yaml
+++ b/hieradata/datacenters/las1.yaml
@@ -9,3 +9,4 @@ profile::testing::value: 'my_las1_hiera_value'
 profile::testing::valuetwo: 'value_2'
 profile::testing::pswindowsupdateurl: 'http://nuget.ad.piccola.us:8081/pswindowsupdate.zip'
 profile::testing::wsusscnurl: 'http://nuget.ad.piccola.us:8081/wsusscn2.cab'
+profile::testing::downloaddirectory: 'c:/windows/temp/ISG-Puppet/updatereporting_win'
