added additional puppet_win params and values to hiera

--- a/hieradata/datacenters/sea1.yaml
+++ b/hieradata/datacenters/sea1.yaml
@@ -5,8 +5,11 @@ profile::nameservers::nameservers:
   - '10.0.3.21'
   - '8.8.8.8'
   - '8.8.4.4'
-profile::testing::value: 'my_sea1_hiera_value'
-profile::testing::valuetwo: 'value_2'
-profile::testing::pswindowsupdateurl: 'http://nuget.ad.piccola.us:8081/pswindowsupdate.zip'
-profile::testing::wsusscnurl: 'http://nuget.ad.piccola.us:8081/wsusscn2.cab'
-profile::testing::downloaddirectory: 'c:/windows/temp/ISG-Puppet/updatereporting_win'
+profile::testing::pswindowsupdate_url: 'http://nuget.ad.piccola.us:8081/pswindowsupdate.zip'
+profile::testing::wsusscn_url: 'http://nuget.ad.piccola.us:8081/wsusscn2.cab'
+profile::testing::download_directory: 'c:/windows/temp/ISG-Puppet/updatereporting_win'
+profile::testing::task_day_of_week: 'sat'
+profile::testing::task_every: '1'
+profile::testing::task_ensure: 'present'
+profile::testing::task_schedule: 'daily'
+profile::testing::task_enabled: 'true'
