--- a/hieradata/datacenters/den3.yaml
+++ b/hieradata/datacenters/den3.yaml
@@ -8,8 +8,8 @@ profile::nameservers::nameservers:
 profile::testing::pswindowsupdate_url: 'http://nuget.ad.piccola.us:8081/pswindowsupdate.zip'
 profile::testing::wsusscn_url: 'http://nuget.ad.piccola.us:8081/wsusscn2.cab'
 profile::testing::download_directory: 'c:/windows/temp/ISG-Puppet/updatereporting_win'
-profile::testing::task_day_of_week: 'sat'
-profile::testing::task_every: 1
+profile::testing::task_day_of_week: 'mon'
+profile::testing::task_every: 2
 profile::testing::task_ensure: 'present'
-profile::testing::task_schedule: 'daily'
-profile::testing::task_enabled: true
+profile::testing::task_schedule: 'weekly'
+profile::testing::task_enabled: false
