--- a/hieradata/datacenters/den3.yaml
+++ b/hieradata/datacenters/den3.yaml
@@ -5,11 +5,12 @@ profile::nameservers::nameservers:
   - '10.0.3.21'
   - '8.8.8.8'
   - '8.8.8.8'
-profile::testing::pswindowsupdate_url: 'http://nuget.ad.piccola.us:8081/pswindowsupdate.zip'
-profile::testing::wsusscn_url: 'http://nuget.ad.piccola.us:8081/wsusscn2.cab'
-profile::testing::download_directory: 'c:/windows/temp/ISG-Puppet/updatereporting_win'
-profile::testing::task_day_of_week: 'mon'
-profile::testing::task_every: 2
-profile::testing::task_ensure: 'present'
-profile::testing::task_schedule: 'weekly'
-profile::testing::task_enabled: false
+profile::updatereporting::pswindowsupdate_url: 'http://nuget.ad.piccola.us:8081/pswindowsupdate.zip'
+profile::updatereporting::wsusscn_url: 'http://nuget.ad.piccola.us:8081/wsusscn2.cab'
+profile::updatereporting::download_directory: 'c:/windows/temp/ISG-Puppet/updatereporting_win'
+profile::updatereporting::task_day_of_week: 'mon'
+profile::updatereporting::task_every: 2
+profile::updatereporting::task_ensure: 'present'
+profile::updatereporting::task_schedule: 'weekly'
+profile::updatereporting::task_enabled: false
+profile::updatereporting::pswindowsupdate_force_download: true
