--- a/hieradata/datacenters/den3.yaml
+++ b/hieradata/datacenters/den3.yaml
@@ -1,6 +1,6 @@
 ---
 profile::wsus_config::server_url: 'http://box.ad.piccola.us:8530'
-profile::timezone::timezone: 'Mountain Standard Time'
+profile::timezone::timezone: 'Mountain Standard TTime'
 profile::nameservers::nameservers:
   - '10.0.3.21'
   - '8.8.8.8'
