updated kms server

--- a/hieradata/win_domains/ad.piccola.us.yaml
+++ b/hieradata/win_domains/ad.piccola.us.yaml
@@ -1,4 +1,4 @@
 ---
-profile::kms::key_management_service_name: 'mono.piccola.us'
+profile::kms::key_management_service_name: 'kms.ad.piccola.us'
 profile::domain_join::username: 'svc_djoin_puppet'
 profile::domain_join::join_options: '3'
