--- a/hieradata/datacenters/sea1.yaml
+++ b/hieradata/datacenters/sea1.yaml
@@ -1,7 +1,7 @@
 ---
-profile::wsus_config::server_url: 'http://box.ad.piccola.us:8530'
-profile::timezone::timezone: 'Pacific Standard Time'
-profile::nameservers::nameservers:
+profile::base::wsus_config::server_url: 'http://box.ad.piccola.us:8530'
+profile::base::timezone::timezone: 'Pacific Standard Time'
+profile::base::nameservers::nameservers:
   - '10.0.3.21'
   - '10.0.3.22'
   - '8.8.8.8'
