--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -1,17 +1,17 @@
 ---
-profile::choco_packages::packages:
+profile::base::choco_packages::packages:
   - packer
   - notepadplusplus
   - checksum
   - putty
-profile::choco_config::location: 'http://nuget.ad.piccola.us:8080/chocolatey'
-profile::choco_install::chocolatey_download_url: 'http://nuget.ad.piccola.us:8081/chocolatey.0.10.8.nupkg'
-profile::updatereporting::pswindowsupdate_url: 'http://nuget.ad.piccola.us:8081/pswindowsupdate.zip'
-profile::updatereporting::wsusscn_url: 'http://nuget.ad.piccola.us:8081/wsusscn2.cab'
-profile::updatereporting::download_directory: 'c:/windows/temp/ISG-Puppet/updatereporting_win'
-profile::updatereporting::task_day_of_week: 'sat'
-profile::updatereporting::task_every: 1
-profile::updatereporting::task_ensure: 'present'
-profile::updatereporting::task_schedule: 'weekly'
-profile::updatereporting::task_enabled: true
-profile::updatereporting::pswindowsupdate_force_download: true
+profile::base::choco_config::location: 'http://nuget.ad.piccola.us:8080/chocolatey'
+profile::base::choco_install::chocolatey_download_url: 'http://nuget.ad.piccola.us:8081/chocolatey.0.10.8.nupkg'
+profile::base::updatereporting::pswindowsupdate_url: 'http://nuget.ad.piccola.us:8081/pswindowsupdate.zip'
+profile::base::updatereporting::wsusscn_url: 'http://nuget.ad.piccola.us:8081/wsusscn2.cab'
+profile::base::updatereporting::download_directory: 'c:/windows/temp/ISG-Puppet/updatereporting_win'
+profile::base::updatereporting::task_day_of_week: 'sat'
+profile::base::updatereporting::task_every: 1
+profile::base::updatereporting::task_ensure: 'present'
+profile::base::updatereporting::task_schedule: 'weekly'
+profile::base::updatereporting::task_enabled: true
+profile::base::updatereporting::pswindowsupdate_force_download: true
