--- a/hieradata/datacenters/den3.yaml
+++ b/hieradata/datacenters/den3.yaml
@@ -1,6 +1,6 @@
 ---
-profile::timezone::timezone: 'Mountain Standard Time'
-profile::nameservers::nameservers:
+profile::base::timezone::timezone: 'Mountain Standard Time'
+profile::base::nameservers::nameservers:
   - '10.0.3.21'
   - '10.0.3.22'
   - '8.8.8.8'
