--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -1,11 +1,4 @@
 ---
-profile::base::choco_packages::packages:
-  - packer
-  - notepadplusplus
-  - checksum
-  - putty
-profile::base::choco_config::location: 'http://nuget.ad.piccola.us:8080/chocolatey'
-profile::base::choco_install::chocolatey_download_url: 'http://nuget.ad.piccola.us:8081/chocolatey.0.10.8.nupkg'
 profile::base::updatereporting::pswindowsupdate_url: 'http://nuget.ad.piccola.us:8081/pswindowsupdate.zip'
 profile::base::updatereporting::wsusscn_url: 'http://nuget.ad.piccola.us:8081/wsusscn2.cab'
 profile::base::updatereporting::download_directory: 'c:/windows/temp/ISG-Puppet/updatereporting_win'
@@ -15,3 +8,16 @@ profile::base::updatereporting::task_ensure: 'present'
 profile::base::updatereporting::task_schedule: 'weekly'
 profile::base::updatereporting::task_enabled: true
 profile::base::updatereporting::pswindowsupdate_force_download: true
+
+profile::base::choco_config::location: 'http://nuget.ad.piccola.us:8080/chocolatey'
+profile::base::choco_config::chocolatey_version: '0.10.8'
+profile::base::choco_install::chocolatey_download_url: 'http://nuget.ad.piccola.us:8081/chocolatey.0.10.8.nupkg'
+profile::base::choco_packages::packages:
+  packer:
+    ensure: '1.0.4'
+  notepadplusplus:
+    ensure: '7.5.1'
+  checksum:
+    ensure: '0.2.0'
+  putty:
+    ensure: '0.70'
