--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -10,7 +10,7 @@ profile::base::updatereporting::task_enabled: true
 profile::base::updatereporting::pswindowsupdate_force_download: true
 
 profile::base::choco_config::location: 'http://nuget.ad.piccola.us:8080/chocolatey'
-profile::base::choco_config::chocolatey_version: '0.10.8'
+profile::base::choco_install::chocolatey_version: '0.10.8'
 profile::base::choco_install::chocolatey_download_url: 'http://nuget.ad.piccola.us:8081/chocolatey.0.10.8.nupkg'
 profile::base::choco_packages::packages:
   packer:
