--- a/hieradata/datacenters/sea1.yaml
+++ b/hieradata/datacenters/sea1.yaml
@@ -1,6 +1,6 @@
 ---
 profile::base::wsus_config::server_url: 'http://box.ad.piccola.us:8530'
-profile::base::timezone::timezone: 'Pacific Standard Time'
+timezone_win::timezone: 'Pacific Standard Time'
 profile::base::nameservers::nameservers:
   - '10.0.3.21'
   - '10.0.3.22'
