add geo hiera values

--- a/hieradata/datacenter/den3.yaml
+++ b/hieradata/datacenter/den3.yaml
@@ -4,3 +4,4 @@ profile::base::nameservers::nameservers:
   - '10.0.3.21'
   - '10.0.3.22'
   - '8.8.8.8'
+wsus_client::server_url: 'http://den3-wsus.ad.piccola.us:8530'
