--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -8,7 +8,7 @@ profile::base::updatereporting::task_ensure: 'present'
 profile::base::updatereporting::task_schedule: 'weekly'
 profile::base::updatereporting::task_enabled: true
 profile::base::updatereporting::pswindowsupdate_force_download: true
-profile::base::powershell::powershell_upgrade_reboot: true
+profile::base::powershell::reboot: true
 profile::base::powershell::upgrade: true
 crypto_win::tls_1_0_client: true
 crypto_win::sha: true
