--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -27,4 +27,4 @@ profile::base::chocolatey::packages:
     ensure: '1.3.3'
     provider: 'chocolatey'
 
-profile::patching::patching::notkbarticleid: 'a,b,c,d,e'
+profile::patching::patching::notkbarticleid: 'a'
