--- a/hieradata/domain/ad.piccola.us.yaml
+++ b/hieradata/domain/ad.piccola.us.yaml
@@ -1,2 +1,10 @@
 ---
 kms_win::key_management_service_name: 'kms.ad.piccola.us'
+profile::base::localaccounts::users:
+  Administrators:
+    members:
+      - ad.piccola.us\joey.piccola
+profile::base::localaccounts::groups:
+  Administrators:
+    members:
+      - ad.piccola.us\isg - admin
