--- a/hieradata/domain/ad.piccola.us.yaml
+++ b/hieradata/domain/ad.piccola.us.yaml
@@ -2,7 +2,7 @@
 kms_win::key_management_service_name: 'kms.ad.piccola.us'
 profile::base::localaccounts::users:
   Administrators:
-    members:
+    name:
       - ad.piccola.us\joey.piccola
 profile::base::localaccounts::groups:
   Administrators:
