--- a/hieradata/domain/ad.piccola.us.yaml
+++ b/hieradata/domain/ad.piccola.us.yaml
@@ -3,7 +3,7 @@ kms_win::key_management_service_name: 'kms.ad.piccola.us'
 profile::base::localaccounts::users:
   Administrators:
     name:
-      - ad.piccola.us\joey.piccola
+      - joey.piccola
 profile::base::localaccounts::groups:
   Administrators:
     members:
