--- a/hieradata/domain/ad.piccola.us.yaml
+++ b/hieradata/domain/ad.piccola.us.yaml
@@ -1,9 +1,12 @@
 ---
 kms_win::key_management_service_name: 'kms.ad.piccola.us'
 profile::base::localaccounts::users:
-  Administrators:
-    name:
-      - joey.piccola
+  joey:
+    ensure: presnet
+    groups: administrators
+    comment: a local account created by puppet
+  vagrant:
+    ensure: absent
 profile::base::localaccounts::groups:
   Administrators:
     members:
