--- a/hiera.yaml
+++ b/hiera.yaml
@@ -24,7 +24,7 @@ hierarchy:
       - "project/%{project}/%{project}.yaml"
 
   - name: "Domain specific team data"
-    # team/isg/davita.corp-isg.yaml
+    # team/isg/ad.piccola.us-isg.yaml
     mapped_paths: [teams, team, "team/%{team}/%{win_domain}-%{team}.yaml"]
 
   - name: "Team data"
@@ -32,8 +32,8 @@ hierarchy:
     mapped_paths: [teams, team, "team/%{team}/%{team}.yaml"]
 
   - name: "Domain data"
-    # domain/davita.corp.yaml
-    path: "domain/%{domain}.yaml"
+    # domain/ad.piccola.us.yaml
+    path: "domain/%{win_domain}.yaml"
 
   - name: "Datacenter"
     path: "datacenter/%{datacenter}.yaml"
