--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -35,7 +35,8 @@ crypto_win::tls_1_0_client: true
 crypto_win::sha: true
 
 wsus_client::auto_update_option: 'AutoNotify'
-wsus_client::detection_frequency_hours: 6
+wsus_client::detection_frequency_hours: 1
+wsus_client::enable_status_server: true
 
 chocolatey::chocolatey_version: 0.10.11
 chocolatey::chocolatey_download_url: 'http://nuget.ad.piccola.us:8081/chocolatey.0.10.11.nupkg'
