--- a/hieradata/role/fileserver.yaml
+++ b/hieradata/role/fileserver.yaml
@@ -3,3 +3,6 @@ profile::base::chocolatey::packages:
   diskcleanup:
     ensure: '1.0'
     provider: 'chocolatey'
+  treesizefree:
+    ensure: '4.2.2.1'
+    provider: 'chocolatey'
