test local accounts

--- a/hieradata/team/usb/ad.piccola.us-usb.yaml
+++ b/hieradata/team/usb/ad.piccola.us-usb.yaml
@@ -2,4 +2,4 @@
 profile::base::localaccounts::groups:
   Administrators:
     members:
-      - ad.piccola.us\ISG Team - Privileged
+      - ad.piccola.us\USB Team - Privileged
