--- a/hieradata/role/isg/fileserver.yaml
+++ b/hieradata/role/isg/fileserver.yaml
@@ -3,3 +3,4 @@ profile::base::localaccounts::groups:
   Administrators:
     members:
       - ad.piccola.us\ISG Team - Privileged (File Server Only)
+      - ad.piccola.us\fake
