--- a/hieradata/os/windows.yaml
+++ b/hieradata/os/windows.yaml
@@ -1,7 +1,6 @@
 ---
-crypto_win::ssl_3_0_client: false
-crypto_win::ssl_3_0_server: false
 profile::base::chocolatey::packages:
   notepadplusplus:
     ensure: '7.5.9'
     provider: 'chocolatey'
+profile::base::bginfo::bginfo_install: true
