--- a/hieradata/datacenter/sea1.yaml
+++ b/hieradata/datacenter/sea1.yaml
@@ -5,3 +5,4 @@ profile::base::nameservers::nameservers:
   - '10.0.3.22'
   - '8.8.8.8'
 wsus_client::server_url: 'http://sea1-wsus.ad.piccola.us:8530'
+wsus_client::enable_status_server: true
