--- a/hiera.yaml
+++ b/hiera.yaml
@@ -2,7 +2,7 @@
 version: 5
 
 defaults:
-  datadir: hieradata
+  datadir: data
   lookup_key: eyaml_lookup_key
   options:
     pkcs7_private_key: /etc/puppetlabs/code/keys/private_key.pkcs7.pem
