--- a/hiera.yaml
+++ b/hiera.yaml
@@ -44,7 +44,7 @@ hierarchy:
     path: "domain/%{win_domain}.yaml"
 
   - name: "Datacenter"
-    path: "datacenter/%{datacenter}.yaml"
+    path: "datacenter/%{activedirectory_meta.site}.yaml"
 
   - name: "Operating System"
     paths:
