--- a/data/project/isg_infra/wsus/upstream.yaml
+++ b/data/project/isg_infra/wsus/upstream.yaml
@@ -8,7 +8,7 @@ wsusserver::update_classifications:
   - Critical Updates
   - Security Updates
 wsusserver::package_ensure: present
-wsusserver::include_management_console:  true
+wsusserver::include_management_console: true
 wsusserver::service_manage: true
 wsusserver::service_ensure: running
 wsusserver::service_enable: true
@@ -20,5 +20,5 @@ wsusserver::update_languages:
 wsusserver::targeting_mode: Client
 wsusserver::host_binaries_on_microsoft_update: false
 wsusserver::synchronize_automatically: true
-wsusserver::synchronize_time_of_day: 20:00:00
+wsusserver::synchronize_time_of_day: '20:00:00'
 wsusserver::number_of_synchronizations_per_day: 1
