--- a/data/project/isg_infra/wsus/wsus.yaml
+++ b/data/project/isg_infra/wsus/wsus.yaml
@@ -13,3 +13,11 @@ wsusserver::synchronize_automatically: true
 wsusserver::synchronize_time_of_day: '20:00:00'
 wsusserver::number_of_synchronizations_per_day: 1
 wsusserver::host_binaries_on_microsoft_update: false
+wsusserver::products:
+  - Windows Server 2016
+  - Windows Server 2008 R2
+  - Windows Server 2012 R2
+  - Windows Server 2019
+wsusserver::update_classifications:
+  - Critical Updates
+  - Security Updates
