disable smb1 for win

--- a/data/os/windows.yaml
+++ b/data/os/windows.yaml
@@ -4,3 +4,4 @@ profile::base::chocolatey::packages:
   notepadplusplus:
     ensure: '7.5.9'
     provider: 'chocolatey'
+profile::base::smbv1::manage: true
