--- a/data/role/cluster.yaml
+++ b/data/role/cluster.yaml
@@ -26,5 +26,5 @@ profile::cluster::clusterquorum::dsc_type: DiskOnly
 profile::cluster::clusterquorum::dsc_retryintervalsec: 30
 profile::cluster::clusterquorum::dsc_retrycount: 10
 
-profile::cluster::clusterproperty::dsc_clusterloglevel: 3
-profile::cluster::clusterproperty::dsc_clusterlogsize: 1024
+profile::cluster::clusterproperty::dsc_clusterloglevel: '3'
+profile::cluster::clusterproperty::dsc_clusterlogsize: '1024'
