--- a/site/failovercluster_win/data/os/windows-2012 R2.yaml
+++ b/site/failovercluster_win/data/os/windows-2012 R2.yaml
@@ -2,4 +2,4 @@
 
 # The CIM class MSCluster_Disk on 2012r2 does not provide UniqueID
 # so we have no way to identify disks once added to the cluster.
-failovercluster_win::quorum_manage: false
+failovercluster_win::manage_quorum: false
