--- a/data/project/isg_infra/wsus/wsus.yaml
+++ b/data/project/isg_infra/wsus/wsus.yaml
@@ -1,3 +1,4 @@
 ---
 profile::webserver::iis::disable_default_website: false
 profile::wsus::server::wsus_directory: d:/wsus
+wsus_server_win::wsus_directory: d:/wsus
