--- a/site/wsus_server_win/data/common.yaml
+++ b/site/wsus_server_win/data/common.yaml
@@ -4,12 +4,12 @@ wsus_server_win::iis_features:
   - Web-WebServer
   - Web-Mgmt-Tools
   - Web-Mgmt-Console
-wsus_server_win::iis_identity_type: NetworkService
-wsus_server_win::iis_idle_timeout: 00:00:00
-wsus_server_win::iis_pinging_enabled: false
-wsus_server+win::iis_private_memory: 0
-wsus_server_win::iis_queue_length: 2000
-wsus_server_win::iis_restart_time_limit: 00:00:00
+wsus_server_win::iis_wsus_app_pool_identity_type: NetworkService
+wsus_server_win::iis_wsus_app_pool_idle_timeout: 00:00:00
+wsus_server_win::iis_wsus_app_pool_pinging_enabled: false
+wsus_server_win::iis_wsus_app_pool_private_memory: 0
+wsus_server_win::iis_wsus_app_pool_queue_length: 2000
+wsus_server_win::iis_wsus_app_pool_restart_time_limit: 00:00:00
 wsus_server_win::wsus_directory: undef
 wsus_server_win::wsus_features:
   - UpdateServices
