update project wsus vars

--- a/data/project/isg_infra/wsus/wsus.yaml
+++ b/data/project/isg_infra/wsus/wsus.yaml
@@ -1,5 +1,5 @@
 ---
-profile::webserver::iis::disable_default_website: false
-profile::wsus::server::wsus_directory: d:/wsus
 wsus_server_win::wsus_directory: d:/wsus
 wsus_server_win::database_type: sql
+#wsus_server_win::database_sql_server: sql01.ad.piccola.us
+#wsus_server_win::database_sql_instance: shrd01
