--- a/site/wsus_server_win/data/common.yaml
+++ b/site/wsus_server_win/data/common.yaml
@@ -12,8 +12,10 @@ wsus_server_win::iis_wsus_app_pool_queue_length: '2000'
 wsus_server_win::iis_wsus_app_pool_restart_time_limit: '00:00:00'
 wsus_server_win::wsus_directory: undef
 wsus_server_win::wsus_features:
-  - UpdateServices
   - UpdateServices-Services
   - UpdateServices-RSAT
   - UpdateServices-API
   - UpdateServices-UI
+wsus_server_win::database_type: wid
+wsus_server_win::database_sql_instance: undef
+wsus_server_win::database_sql_server: undef
