--- a/data/project/isg_infra/wsus/wsus.yaml
+++ b/data/project/isg_infra/wsus/wsus.yaml
@@ -1,5 +1,12 @@
 ---
 wsus_server_win::wsus_directory: d:/wsus
 wsus_server_win::database_type: sql
-#wsus_server_win::database_sql_server: sql01.ad.piccola.us
-#wsus_server_win::database_sql_instance: shrd01
+
+profile::base::chocolatey::packages:
+  reportviewer2012:
+    ensure: 11.0.3452.0
+    provider: chocolatey
+  sqlserver-cmdlineutils:
+    ensure: 15.0.1300.359001
+    provider: chocolatey
+
