--- a/data/os/windows-2016.yaml
+++ b/data/os/windows-2016.yaml
@@ -1,34 +1,27 @@
 ---
-# profile::wsus::client::scheduled_tasks_to_remove:
-#   - Microsoft\\Windows\\UpdateOrchestrator\\Policy Install
-#   - Microsoft\\Windows\\UpdateOrchestrator\\Refresh Settings
-#   - Microsoft\\Windows\\UpdateOrchestrator\\Resume On Boot
-#   - Microsoft\\Windows\\UpdateOrchestrator\\USO_UxBroker_Display
-#   - Microsoft\\Windows\\UpdateOrchestrator\\USO_UxBroker_ReadyToReboot
-
 
 profile::wsus::client::scheduled_tasks_to_remove:
   Microsoft\Windows\UpdateOrchestrator\Maintenance Install:
     enabled: false
     command: c:\windows\system32\usoclient.exe
     compatibility: 5
-#  Microsoft\\Windows\\UpdateOrchestrator\\Policy Install:
-#    enabled: false
-#    command: c:\\windows\\system32\\usoclient.exe
-#    compatibility: 4
-#  Microsoft\\Windows\\UpdateOrchestrator\\Refresh Settings:
-#    enabled: false
-#    command: c:\\windows\\system32\\usoclient.exe
-#    compatibility: 4
-#  Microsoft\\Windows\\UpdateOrchestrator\\Resume On Boot:
-#    enabled: false
-#    command: c:\\windows\\system32\\usoclient.exe
-#    compatibility: 4
-#  Microsoft\\Windows\\UpdateOrchestrator\\USO_UxBroker_Display:
-#    enabled: false
-#    command: c:\\windows\\system32\\MusNotification.exe
-#    compatibility: 4
-#  Microsoft\\Windows\\UpdateOrchestrator\\USO_UxBroker_ReadyToReboot:
-#    enabled: false
-#    command: c:\\windows\\system32\\MusNotification.exe
-#    compatibility: 4
+  Microsoft\Windows\UpdateOrchestrator\Policy Install:
+    enabled: false
+    command: c:\windows\system32\usoclient.exe
+    compatibility: 5
+  Microsoft\Windows\UpdateOrchestrator\Refresh Settings:
+    enabled: false
+    command: c:\windows\system32\usoclient.exe
+    compatibility: 5
+  Microsoft\Windows\UpdateOrchestrator\Resume On Boot:
+    enabled: false
+    command: c:\windows\system32\usoclient.exe
+    compatibility: 5
+  Microsoft\Windows\UpdateOrchestrator\USO_UxBroker_Display:
+    enabled: false
+    command: c:\windows\system32\MusNotification.exe
+    compatibility: 5
+  Microsoft\Windows\UpdateOrchestrator\USO_UxBroker_ReadyToReboot:
+    enabled: false
+    command: c:\windows\system32\MusNotification.exe
+    compatibility: 5
